--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://kit.fontawesome.com/7e558de07b.js" crossorigin="anonymous"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbjT_TLholqxL8V6zoP1Bkm12_3vqO024"></script> 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
